# libimgcvt

./: .gitmodules  CMakeLists.txt  CMakelists.txt  README.md  exports.def  imgcvtutils.c  imgdecode.c  imgdecode.h  imgencode.c  imgencode.h  libimagecvt.c  libimagecvt.h  libwebpcvt.c  libwebpcvt.h
giflib/: CMakeLists.txt
libjpeg/lib/cmake/libjpeg-turbo/: libjpeg-turboTargets-release.cmake
libjpeg/lib/pkgconfig/: libjpeg.pc  libturbojpeg.pc
libpng/lib/libpng/: libpng16-release.cmake  libpng16.cmake
libpng/lib/pkgconfig/: libpng.pc
libwebp/lib/pkgconfig/: libsharpyuv.pc  libwebp.pc  libwebpdecoder.pc  libwebpdemux.pc  libwebpmux.pc
libwebp/share/WebP/cmake/: WebPTargets.cmake
